Bug 1755323 [Wayland] Added widget.wayland.use-move-to-rect preference to control popup placement r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D140341